# QTMusicPlayer

./: README.md
Documents/QTAudioPlayer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
